--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
+if(POLICY CMP0025)
+  cmake_policy(SET CMP0025 NEW)
+endif()
+
+set(CMAKE_CXX_STANDARD 20)
 
 include(cmake/prelude.cmake)
 include(cmake/FetchLib2.cmake)
